--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,11 +3,7 @@ import { getCollection } from 'astro:content'
 import type { Frontmatter } from '../config'
 import { SiteMetadata } from '../config'
 import Base from '../layouts/base.astro'
-import Hero from '../components/hero.astro'
-import Features from '../components/features.astro'
-import FindOutMore from '../components/findoutmore.astro'
 import LatestArticles from '../components/latestarticles.astro'
-import CTA from '../components/cta.astro'
 
 const frontmatter: Frontmatter = {
   title: SiteMetadata.title,
@@ -18,14 +14,12 @@ const frontmatter: Frontmatter = {
 }
 
 const posts = await getCollection('blog')
-const latestPosts = posts.sort((a, b) => +b.data.publishDate - +a.data.publishDate).filter(p => !p.data.draft)
+const latestPosts = posts
+  .sort((a, b) => +b.data.publishDate - +a.data.publishDate)
+  .filter(p => !p.data.draft)
 ---
 
 <Base frontmatter={frontmatter}>
-  <Hero />
-  <Features />
-  <FindOutMore />
   <LatestArticles posts={latestPosts} />
-  <CTA />
   <div class="p-24 md:p-12 bg-white dark:bg-black"></div>
 </Base>
